Fixed the dropdown button flashing different colors like a link would. Removed rounded edges when hovering over a nav-link on mobile.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -55,6 +55,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
+    border-radius: 0;
     padding: 0;
 }
 
@@ -62,9 +63,16 @@ body {
     display: block;
 }
 
+.dropbutton:link {
+    color: black;
+}
 
 .dropbutton:active {
-    text-decoration: none;
+    color: black;
+}
+
+.dropbutton:visited {
+    color: black;
 }
 
 .headings {
